# ChangeLog for media-video/mjpegtools
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.118 2006/08/28 21:16:27 zzam Exp $

  28 Aug 2006; Matthias Schwarzott <zzam@gentoo.org>
  files/mjpegtools-1.8.0-as-needed.patch:
  Added the make-dependencies which broke parallel building when having the
  as-needed patch applied. Bug #145265.

  25 Aug 2006; Matthias Schwarzott <zzam@gentoo.org>
  +files/mjpegtools-1.8.0-as-needed.patch, mjpegtools-1.8.0-r1.ebuild:
  Fixed linking with --as-needed, see bug #144656.

  25 Aug 2006; Matthias Schwarzott <zzam@gentoo.org>
  +files/mjpegtools-1.8.0-pkg-config.patch, mjpegtools-1.8.0-r1.ebuild:
  Fixed problem with missing png-support when USE=-quicktime, bug #144551.
  Added use-flag png and dependency to libpng which has been missing up to
  now.

  25 Aug 2006; Matthias Schwarzott <zzam@gentoo.org>
  +files/mjpegtools-1.8.0-pkg-config.patch, mjpegtools-1.8.0-r1.ebuild:
  Fixed problem with missing png-support when USE=-quicktime, bug #144551.
  Added use-flag png and dependency to libpng which has been missing up to
  now.

  30 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/mjpegtools-1.8.0-libquicktime.patch, mjpegtools-1.8.0-r1.ebuild:
  Add patch from bug #128619 when using libquicktime 0.9.9, thanks to Mario
  Fetka; also fix quicktime useflag, thanks to Eldad Zack (eldad), both in bug
  #128619.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/mjpegtools-1.6.2-configure.patch, -files/mjpegtools-1.6.2-dv.patch,
  -files/mjpegtools-1.6.2-fPIC.patch,
  -files/mjpegtools-1.6.2-gcc34-altivec.patch,
  -files/mjpegtools-1.6.2-gcc34.patch,
  -files/mjpegtools-1.6.2-libquicktime094.patch,
  -files/mjpegtools-1.6.2-nogtk.patch, -files/altivec-fix-1.6.2.patch,
  -files/no-x11-lib-2.patch, -mjpegtools-1.6.2-r4.ebuild: