@@ -22,25 +22,26 @@ MD5 d50c3cb88e659af5e2679530e645c0bf files/mjpegtools-1.8.0-pkg-config.patch 423
 RMD160 2d3d55fb7561a9c0ceeb7ce880953cb12662489c files/mjpegtools-1.8.0-pkg-config.patch 423
 SHA256 3b26122803c1ea805534308137323ee119fbc29777fa4a588ebe6dade0a8d490 files/mjpegtools-1.8.0-pkg-config.patch 423
 DIST mjpegtools-1.8.0.tar.gz 1475998 RMD160 4d97a6a721f29223975605e2a5e645b4d7d129b5 SHA1 e11d68298a64b52f98724dbf3fd14f168e140290 SHA256 d841575c72cd0e587c1bab703d0906e3d23bf428424000557739cf5d6097209a
-EBUILD mjpegtools-1.8.0-r1.ebuild 3110 RMD160 817d2b9bcc62f77a391005c8a111d6eaaa88bd0c SHA1 880348121ddb13dbaa054d30ebec7811d0a1f6ec SHA256 f6029351e669c28e85e32c66a86da97f7e4f025b06be5b254ad1366b868d8379
-MD5 155467ad63209e30d463e4e28ea15553 mjpegtools-1.8.0-r1.ebuild 3110
-RMD160 817d2b9bcc62f77a391005c8a111d6eaaa88bd0c mjpegtools-1.8.0-r1.ebuild 3110
-SHA256 f6029351e669c28e85e32c66a86da97f7e4f025b06be5b254ad1366b868d8379 mjpegtools-1.8.0-r1.ebuild 3110
-MISC ChangeLog 21109 RMD160 638bd743864b65943310c6042baa94a50f09cbd3 SHA1 a9ee275f980c8aee77ccae2e545c8ce85a6d7549 SHA256 c78215ec4c05d1c81e176b63168f3438fbb8aca4620aa1d3460416f0218d4eea
-MD5 482b337ad95df50f98ca8f0a7b2ae0c2 ChangeLog 21109
-RMD160 638bd743864b65943310c6042baa94a50f09cbd3 ChangeLog 21109
-SHA256 c78215ec4c05d1c81e176b63168f3438fbb8aca4620aa1d3460416f0218d4eea ChangeLog 21109
+DIST mjpegtools-m4-1.tar.bz2 4547 RMD160 b81b89bb6364023606a1d3ca9519e143fe053ab4 SHA1 4c69f9918dcc56fc544fef9af9aaed968da1ae67 SHA256 10de1e206ee9c84aae111e95f655ad9394be749bfed01d337f7ff9a983aab522
+EBUILD mjpegtools-1.8.0-r1.ebuild 3285 RMD160 57e4f6423cd91d12e86077e78603f42345de614f SHA1 7d7bbf9f837d9295278fc836d73948b873baa458 SHA256 d7b69a13885aedb95e2340ce3b28e728c25e65f202a99afaf3dd25ee1355a1eb
+MD5 eb1366f55ea4fbaa6c2d99dd2779f18c mjpegtools-1.8.0-r1.ebuild 3285
+RMD160 57e4f6423cd91d12e86077e78603f42345de614f mjpegtools-1.8.0-r1.ebuild 3285
+SHA256 d7b69a13885aedb95e2340ce3b28e728c25e65f202a99afaf3dd25ee1355a1eb mjpegtools-1.8.0-r1.ebuild 3285
+MISC ChangeLog 21252 RMD160 b528492097c83fb14a4e7b357ae31216ee63f76c SHA1 b02c5c8512929242462a6de4bfd74c1019950f51 SHA256 1aef9ec49862d8f30d9278e61c40c7e06651e68766f43fa422dac97699e31aa8
+MD5 4de626416676222fd7c3f83ff808b56b ChangeLog 21252
+RMD160 b528492097c83fb14a4e7b357ae31216ee63f76c ChangeLog 21252
+SHA256 1aef9ec49862d8f30d9278e61c40c7e06651e68766f43fa422dac97699e31aa8 ChangeLog 21252
 MISC metadata.xml 311 RMD160 5d2d2fac1a97018f75e5ff1e8e7c90fb02511cb9 SHA1 228093feb5989936d0480ac2bc543df959b06dfa SHA256 74869f2267904c0a7409e16cc0d2e54f41b186683c4f5bb6e0127b275e66b4b0
 MD5 fe49014257499366bdc6903a9aa33fe5 metadata.xml 311
 RMD160 5d2d2fac1a97018f75e5ff1e8e7c90fb02511cb9 metadata.xml 311
 SHA256 74869f2267904c0a7409e16cc0d2e54f41b186683c4f5bb6e0127b275e66b4b0 metadata.xml 311
-MD5 2188754e2cd2108901028f4e9c83d696 files/digest-mjpegtools-1.8.0-r1 253
-RMD160 5743c9441f2552b35045c0b5d3b9797079f8d30d files/digest-mjpegtools-1.8.0-r1 253
-SHA256 21770c4dd885e9231db381f9693c0650f32cd48f0a5c4438e62338c3b75d3c97 files/digest-mjpegtools-1.8.0-r1 253
+MD5 1d7f555dfd98b8b2b6e1d05fb898002c files/digest-mjpegtools-1.8.0-r1 497
+RMD160 9b325d098a5328604e081d42fe6633fe0036dd09 files/digest-mjpegtools-1.8.0-r1 497
+SHA256 4b2cc5ce3875c7bd8e06e9dda7c0e3cc89ccd78dc4c8e163c42066537a25d175 files/digest-mjpegtools-1.8.0-r1 497
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFE8103t2vP6XvVdOcRAh6wAJ9eWolQrDusyZnW18SISimNxQLd7QCfVAiZ
-y6Zi+u4QdwFH5/y9gVVzjGk=
-=HKTF
+iD8DBQFE/vgnt2vP6XvVdOcRAmZ0AKDhHzsyVv/Kg/KY92NzTS+IpcDviwCeNMiu
+rMtpLyNfb1jySWWOD2IaimA=
+=t7nI
 -----END PGP SIGNATURE-----
