@@ -1,3 +1,6 @@
 MD5 6fd98362310480bdaf7171e9659f165f mjpegtools-1.8.0.tar.gz 1475998
 RMD160 4d97a6a721f29223975605e2a5e645b4d7d129b5 mjpegtools-1.8.0.tar.gz 1475998
 SHA256 d841575c72cd0e587c1bab703d0906e3d23bf428424000557739cf5d6097209a mjpegtools-1.8.0.tar.gz 1475998
+MD5 cd55f55ddd646eb79d4e4df99d4c777f mjpegtools-m4-1.tar.bz2 4547
+RMD160 b81b89bb6364023606a1d3ca9519e143fe053ab4 mjpegtools-m4-1.tar.bz2 4547
+SHA256 10de1e206ee9c84aae111e95f655ad9394be749bfed01d337f7ff9a983aab522 mjpegtools-m4-1.tar.bz2 4547
