@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mjpegtools
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.118 2006/08/28 21:16:27 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.119 2006/09/06 16:32:23 zzam Exp $
+
+  06 Sep 2006; Matthias Schwarzott <zzam@gentoo.org>
+  mjpegtools-1.8.0-r1.ebuild:
+  Added missing m4-files for autoconf, solves Bug #117091.
 
   28 Aug 2006; Matthias Schwarzott <zzam@gentoo.org>
   files/mjpegtools-1.8.0-as-needed.patch:
